# freecurrencyapi

./: .gitignore  LICENSE  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  setup.py
freecurrencyapi/: .gitignore
freecurrencyapi/notebooks/: 2.0-initial-filehandle.ipynb
freecurrencyapi/src/: api_collector.py  cloud_storage.py  file_handle.py  free_currency_converter_api.py  gcloud.py  main.py  requirements.txt
notebooks/: 1.0-initial-interaction-api-data.ipynb  2.0-initial-filehandle.ipynb
src/: free_currency_converter_api.py
